[tool.poetry]
name = "elephant-core"
version = "0.5.0"
description = ""
authors = ["Ko Sugawara <ko.sugawara@ens-lyon.fr>"]
readme = "README.md"
packages = [{include = "elephant", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.1"
torchvision = "^0.15.2"
tqdm = "^4.65.0"
h5py = "^3.8.0"
zarr = "^2.14.2"
pika = "^1.3.2"
redis = "^4.5.5"
scikit-image = "^0.21.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
ipython = "^8.14.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
